# byrror

./: CMakeLists.txt  GNUmakefile  Gemfile  add_headers_to_compile_commands.rb  main.cpp
example/: iteration.cpp
include/: ContainerStream.h  ContainerStream.hpp  Stream.h
src/: ContainerStream.cpp  ContainerStream.h  ContainerStream.hpp  Stream.cpp  Stream.h  base.cpp  base.hpp  container_stream.h  iter_stream.h  main.cpp  pig.h  stream.h  with.cpp  with.hpp
